fixed display bugs in js files

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                 </div>
                 <div class="movie-cards row p-0 my-3 my-sm-5 gap-4 align-items-center justify-content-center justify-content-lg-left">
                     <div class="movie-cards-main-container pb-2 pb-sm-4 col-12 col-lg">
-                        <div class="single-movie-card row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-5 m-0 p-0">
-                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col">
+                        <div class="single-movie-card row flex-nowrap m-0 p-0">
+                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
                                 <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                 <div class="card-movie-details">
                                     <div class="card-ratings-badge px-3 py-2 rounded-5">
@@ -131,7 +131,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col">
+                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
                                 <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                 <div class="card-movie-details">
                                     <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -143,7 +143,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col ">
+                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2 ">
                                 <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                 <div class="card-movie-details">
                                     <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -155,7 +155,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col ">
+                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2 ">
                                 <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                 <div class="card-movie-details">
                                     <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -167,7 +167,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col hidden-class">
+                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
                                 <img src='assets/defualt.jpg'   alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                 <div class="card-movie-details">
                                     <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -179,7 +179,43 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col hidden-class">
+                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <img src='assets/defualt.jpg'   alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
+                                <div class="card-movie-details">
+                                    <div class="card-ratings-badge  px-3 py-2 rounded-5">
+                                        <p class="card-movie-rating m-0">2.2</p>
+                                    </div>
+                                    <h6 class="card-movie-name still-loading"></h6>
+                                    <div class="stream-services-container">
+                                        <p class="d-inline watch-date">watch on:</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <img src='assets/defualt.jpg'   alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
+                                <div class="card-movie-details">
+                                    <div class="card-ratings-badge  px-3 py-2 rounded-5">
+                                        <p class="card-movie-rating m-0">2.2</p>
+                                    </div>
+                                    <h6 class="card-movie-name still-loading"></h6>
+                                    <div class="stream-services-container">
+                                        <p class="d-inline watch-date">watch on:</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <img src='assets/defualt.jpg'   alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
+                                <div class="card-movie-details">
+                                    <div class="card-ratings-badge  px-3 py-2 rounded-5">
+                                        <p class="card-movie-rating m-0">2.2</p>
+                                    </div>
+                                    <h6 class="card-movie-name still-loading"></h6>
+                                    <div class="stream-services-container">
+                                        <p class="d-inline watch-date">watch on:</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
                                 <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                 <div class="card-movie-details">
                                     <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -191,7 +227,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col hidden-class">
+                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
                                 <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                 <div class="card-movie-details">
                                     <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -203,7 +239,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col hidden-class">
+                            <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
                                 <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                 <div class="card-movie-details">
                                     <div class="card-ratings-badge  px-3 py-2 rounded-5">
