--- a/premieres.html
+++ b/premieres.html
@@ -207,7 +207,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -219,7 +219,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -231,7 +231,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -314,7 +314,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -326,7 +326,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -338,7 +338,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -421,7 +421,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -433,7 +433,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -445,7 +445,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -528,7 +528,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -540,7 +540,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -552,7 +552,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -635,7 +635,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -647,7 +647,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
@@ -659,7 +659,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2">
+                                <div class="card-movie-main-container rounded-3 p-2 p-sm-4 col-6 col-sm-4 col-md-3 col-lg-2" style="display:none">
                                     <img src='assets/defualt.jpg'  alt="" class="card-movie-img mb-3 rounded-4 still-loading" loading="lazy"/>
                                     <div class="card-movie-details">
                                         <div class="card-ratings-badge  px-3 py-2 rounded-5">
